<resources>
    <string name="app_name">Tiket</string>
    <string name="main_menu">test</string>
    <string name="title_activity_login">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign In</string>
    <string name="action_sign_up">Sign Up</string>
    <string name="action_later">Forgot Password</string>
    <string name="action_later2">Don\'t do this now</string>
    <string name="name">Name</string>
    <string name="date_of_birth">Date Of Birth</string>
    <string name="birth_place">Birth Place</string>
    <string name="phone_number">Phone Number</string>
    <string name="id_number">Identity Number</string>

    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_register">Sign Up</string>
</resources>
