<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.example.mubarak.tiket.LoginActivity"
    android:background="@color/background"
    >

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/login_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/email_login_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            >

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:id="@+id/imageView"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/ic_action_name"
                android:padding="5dp"
                android:layout_marginTop="20dp"
                android:layout_marginBottom="20dp"
                />

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:longClickable="false">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_email"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"
                    android:singleLine="true"

                    style="@style/TextInputStyle"
                    />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true"
                    style="@style/TextInputStyle"
                    />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/email_sign_in_button"
                style="@style/ButtonStyle"
                android:text="@string/action_sign_in"
                />
            <Button
                android:id="@+id/email_sign_up_button"
                style="@style/ButtonStyle"
                android:text="@string/action_sign_up"
                />

            <GridLayout
                android:id="@+id/extra_form"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:layout_gravity="center_horizontal">


                <TextView
                    android:id="@+id/dont_do_this_now"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/action_later2"
                    android:textStyle="bold"
                    android:gravity="left"
                    android:layout_row="0"
                    android:layout_column="0"
                    android:layout_gravity="fill_horizontal"
                    android:paddingLeft="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    />

                <TextView
                    android:id="@+id/forgot_password"
                    style="?android:textAppearanceSmall"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="20dp"
                    android:text="@string/action_later"
                    android:textStyle="bold"
                    android:gravity="right"
                    android:layout_row="0"
                    android:layout_column="1"
                    android:paddingRight="20dp"
                    android:paddingTop="10dp"
                    android:paddingBottom="10dp"
                    />
            </GridLayout>



        </LinearLayout>
    </ScrollView>
</LinearLayout>
